--- a/front/edit.html
+++ b/front/edit.html
@@ -101,9 +101,9 @@
         $btnUpdate.click(function () {
             const $this = $(this)
             const id = $this.attr('data-id')
-            const title = $textTitle.val().replace('\'', '\\\'')
-            const content = $textContent.val().replace('\'', '\\\'')
-            console.log(content)
+            const title = $textTitle.val()
+            const content = $textContent.val()
+            
 
             const url = '/api/blog/update?id=' + id
             const data = {
